[package]
name = "releveldb"
version = "0.1.0"
description = "Reimplement leveldb in rust, with some new features."
keywords = ["leveldb", "lsm", "rust", "storage", "nosql"]
authors = ["tancehao(tancehao93@163.com)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "releveldb-cli"
path = "bin/releveldb_cli.rs"

[lib]
name = "releveldb"
path = "src/lib.rs"

[dependencies]
bytes = "1.3"
crc = "3.0.0"
snap = "1"
linked-hash-map-rs = "0.1.7"
crossbeam = "0.8.2"
once_cell = "1.7"